<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.tibco_citautomation</groupId>
  <artifactId>citautomation</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
   	<plugin>
    	<groupId>org.apache.maven.plugins</groupId>
    	<artifactId>maven-compiler-plugin</artifactId>
    	<version>3.8.0</version>
    	<configuration>
        	<release>14</release>
        	<compilerArgs>
                <arg>--enable-preview</arg>
            </compilerArgs>
    		</configuration>
	</plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
        <argLine>--enable-preview</argLine>
          <suiteXmlFiles>
            <suiteXmlFile>testng.xml</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
      </plugin>
    </plugins>    
  </build>
  
  <dependencies>
  	<dependency>
    <groupId>org.seleniumhq.selenium</groupId>
    <artifactId>selenium-java</artifactId>
    <version>4.0.0-alpha-3</version>
	</dependency>
	<dependency>
    <groupId>com.google.guava</groupId>
    <artifactId>guava</artifactId>
    <version>30.1-jre</version>
	</dependency>
	<dependency>
    <groupId>com.google.code.gson</groupId>
    <artifactId>gson</artifactId>
    <version>2.8.6</version>
 	</dependency>
  	<dependency>
    	<groupId>org.testng</groupId>
    	<artifactId>testng</artifactId>
    	<version>7.3.0</version>
    	<scope>compile</scope>
	</dependency>
	<dependency>
    	<groupId>org.seleniumhq.selenium</groupId>
    	<artifactId>selenium-chrome-driver</artifactId>
    	<version>3.141.59</version>
	</dependency>
	<dependency>
    	<groupId>org.apache.poi</groupId>
    	<artifactId>poi</artifactId>
    	<version>4.1.2</version>
	</dependency>
	<dependency>
    	<groupId>org.apache.poi</groupId>
    	<artifactId>poi-examples</artifactId>
    	<version>4.1.2</version>
	</dependency>
	<dependency>
    	<groupId>org.apache.poi</groupId>
    	<artifactId>poi-excelant</artifactId>
    	<version>4.1.2</version>
	</dependency>
	<dependency>
    	<groupId>org.apache.poi</groupId>
    	<artifactId>poi-ooxml</artifactId>
    	<version>4.1.2</version>
	</dependency>
	<dependency>
    	<groupId>org.apache.poi</groupId>
    	<artifactId>poi-ooxml-schemas</artifactId>
    	<version>4.1.2</version>
	</dependency>
	<dependency>
    	<groupId>org.apache.poi</groupId>
    	<artifactId>poi-scratchpad</artifactId>
    	<version>4.1.2</version>
	</dependency>
	<dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-text</artifactId>
    	<version>1.9</version>
	</dependency>
	<dependency>
    	<groupId>com.squareup.okhttp3</groupId>
    	<artifactId>okhttp</artifactId>
    <version>4.9.0</version>
	</dependency>
	<dependency>
    	<groupId>com.squareup.okio</groupId>
    	<artifactId>okio</artifactId>
    	<version>2.9.0</version>
	</dependency>
	<dependency>
    	<groupId>log4j</groupId>
    	<artifactId>log4j</artifactId>
    	<version>1.2.17</version>
	</dependency>
	<dependency>
    	<groupId>com.aventstack</groupId>
    	<artifactId>extentreports</artifactId>
    	<version>3.0.0</version>
		</dependency>
	<dependency>
    	<groupId>org.freemarker</groupId>
    	<artifactId>freemarker</artifactId>
    	<version>2.3.30</version>
	</dependency>
	<dependency>
    	<groupId>com.github.virtuald</groupId>
    	<artifactId>curvesapi</artifactId>
    	<version>1.06</version>
	</dependency>
	<dependency>
    	<groupId>net.bytebuddy</groupId>
    	<artifactId>byte-buddy</artifactId>
    	<version>1.10.18</version>
	</dependency>
	<dependency>
    	<groupId>org.apache.directory.studio</groupId>
    	<artifactId>org.apache.commons.io</artifactId>
    	<version>2.4</version>
	</dependency>
	<dependency>
    	<groupId>net.sf.saxon</groupId>
    	<artifactId>saxon</artifactId>
    	<version>8.7</version>
	</dependency>
	<dependency>
    	<groupId>org.apache.xmlbeans</groupId>
    	<artifactId>xmlbeans</artifactId>
    	<version>4.0.0</version>
	</dependency>
	<dependency>
  <groupId>io.github.sukgu</groupId>
  <artifactId>automation</artifactId>
  <version>0.0.4</version>
</dependency>
  </dependencies>
  
</project>